...
  Icons.menu_book,
  Icons.piano,
  Icons.insights,
];

const List<Key> _bottomTabKeys = [
  Key("nav_tab_curriculum"),
  Key("nav_tab_piano"),
  Key("nav_tab_progress"),
];

const List<Key> _drawerTabKeys = [
  Key("drawer_tab_curriculum"),
  Key("drawer_tab_piano"),
...
